# argo

./: .gitignore  AGENTS.md  Dockerfile  FAQ.md  MANIFEST.in  Pipfile  README.html  README.md  README_odbargo-view.md  README_odbargo-view_tw.md  README_tw.html  README_tw.md  argo_app.py  change_log.md  cli.spec  cli_entry.py  cli_win.spec  docker-compose.yml  odbargo-cli.py  odbargo-cli.spec  odbargo-view.spec  odbargo-view_entry.py  odbargo.spec  pyproject.toml  requirements.txt  setup.py  version-viewer.txt  version.txt  view.spec
argo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
argo_app/: README.html  README.md  README_tw.html  README_tw.md  app.py
argo_app/odbargo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
argo_app/src/: config.py
argo_cli/: __init__.py  slash.py
cli/: __main__.py  odbargo_cli.py  pyproject.toml  slash.py
conf/: rthook_silence_mpl.py  simu.conf
dev/: argoBGC_o2_blacksea.ipynb  argo_writedb01.ipynb  try_antimeridian.py  update_argodb.py
odbViz/: __init__.py  __main__.py  plugin.py  pyproject.toml
odbViz/cli/: viewer_client.py
odbViz/tests/: test_viewer_handshake.py
odbargo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
odbargo_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
odbargo_view/: __init__.py  plugin.py  pyproject.toml
ref/: Apex_ISUS_Float_list.html  aou.m
scripts/: README_argopy_cli.md  argopy_cli.py  build_argopy_cli.sh  build_odbargo-cli.sh
scripts/win_installer/: check_port.bat  install_app.bat  install_env.bat  install_python.bat  install_script.iss  python_downloader_bits.ps1  start_odbargo.bat  uninstall_env.bat
specs/: odbViz_spec_v0_3_0.md  odbViz_spec_v0_3_0_antimeridian_keynote.md  odbViz_spec_v0_3_0_map_plot_patch.md  odbargo_view_spec_format_patch.md  odbargo_view_spec_v_0.md  odbargo_view_spec_v_0_2.md  odbargo_view_spec_v_0_2_1.md  odbargo_view_spec_v_0_2_8.md
tests/: test_case_insensitive.py  test_plugin_client.py  test_plugin_filters.py  test_slash_commands.py  test_wmo_parser.py
