[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "odbargo"
version = "0.4.0"
description = "ODBArgo CLI + viewer (single distribution)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "websockets>=12.0",
]
# Optional heavy deps (used by the viewer)
[project.optional-dependencies]
view = [
  "xarray>=2024.6.0",
  "h5netcdf",
  "h5py",
  "netCDF4", 
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
]
map = [
  "cartopy",
  "basemap",
  "basemap-data",
]

[project.scripts]
odbargo-cli  = "cli.odbargo_cli:main"
odbargo-view = "odbViz.plugin:main"

[tool.hatch.build.targets.wheel]
packages = ["cli", "odbViz"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

# If you plan to include additional subpackages under these, use pattern find:
# [tool.setuptools.packages.find]
# include = ["cli*", "odbargo_view*"]
# exclude = ["dev*", "tmp*", "ref*", "figs*", "conf*", "specs*", "argo_app*", "tests*", "scripts*"]
