[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "odbargo-view"
version = "0.4.0"
description = "Viewer/analytics for ODBArgo (xarray/matplotlib)"
requires-python = ">=3.10"
dependencies = [
  "xarray>=2024.6.0",
  "h5netcdf",
  "h5py",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.scripts]
odbargo-view = "odbViz.plugin:main"

[tool.hatch.build.targets.wheel]
packages = ["odbViz"]
